# corewar-mkii

./: .gitignore  CMakeLists.txt  LICENSE  README.md  corewar.ini  gui.ini
.md/: _COREWAR_TUTORIAL.md  _DEVELOPER_LOG.md  _REDCODE_TUTORIAL.md
cmake/: utils.cmake
corewar-mk2/: CMakeLists.txt  README.md
corewar-mk2/include/OS/: assembly.hpp
corewar-mk2/test/warriors.tester/: parser.tester.asm
corewar-mk2/warriors/: rock.asm
corewar-mkii/: CMakeLists.txt  README.md
corewar-mkii/docs/: REDCODE_TUTORIAL.md
corewar-mkii/gui/include/: control_panel.gui.hpp  imgui_required.hpp
corewar-mkii/gui/src/: corewar.gui.cpp
corewar-mkii/include/: settings.hpp  warrior.hpp
corewar-mkii/include/OS/: pcb.hpp
corewar-mkii/include/OS/template/: round_robin.hpp
corewar-mkii/src/OS/: memory.cpp
corewar-mkii/test/src/: parser.tester.cpp
docs/: REDCODE_TUTORIAL.md
main/: CMakeLists.txt  build.ps1  corewar.gui.ini  corewar.ini
main/gui/include/: corewar.gui.hpp  imgui_required.h  imgui_required.hpp  memory.gui.hpp  memory_viewer.gui.hpp
main/gui/src/: control_panel_sections.gui.cpp  corewar.gui.cpp  memory.gui.cpp  memory_viewer.gui.cpp
main/inc/: asm.hpp  core.hpp  core_simulator.hpp  corewar.hpp  ctrl_unit.hpp  file_loader.hpp  mars.hpp  p_queue.hpp  parser.hpp  pcb.hpp  player.hpp  process_scheduler.hpp  scheduler.hpp  settings.hpp
main/inc/OS/: assembly.hpp  cpu.hpp  ctrl_unit.hpp  memory.hpp
main/inc/OS/template/: c_ram.hpp  round_robin.hpp
main/inc/template/: c_ram.hpp  queue.hpp  ram.hpp  round_robin.hpp
main/include/: corewar.hpp  file_loader.hpp  parser.hpp  player.hpp  settings.hpp  warrior.hpp
main/include/OS/: assembly.hpp  assembly_enums.hpp  cpu.hpp  ctrl_unit.hpp  memory.hpp  pcb.hpp  report.hpp  scheduler.hpp  system_enums.hpp  uuid.hpp
main/include/OS/template/: round_robin.hpp
main/src/: CMakeLists.txt  Decoder.s  asm.cpp  cli_debug.cpp  core.cpp  corewar-cli.cpp  corewar.cpp  ctrl_unit.cpp  debug.cli.cpp  mars.cpp  match_settings.txt  parser.cpp  pcb.cpp  process_scheduler.cpp  scheduler.cpp
main/src/OS/: assembly.cpp  cpu.cpp  memory.cpp  pcb.cpp  report.cpp  scheduler.cpp
main/src/inc/: asm_inst.hpp  core.hpp  core_simulator.hpp
main/src/lib/: file_loader.hpp  settings.hpp
main/test/: CMakeLists.txt
main/test/src/OS/: cpu.tester.cpp  memory.tester.cpp  scheduler.tester.cpp
main/test/test_suite/: parser.tester.hpp
main/test/test_suite/OS/: cpu.tester.hpp  memory.tester.hpp  scheduler.tester.hpp
main/test/tests/: core_tests.hpp  mars_tests.hpp  parser_tests.hpp  scheduler_tests.hpp
main/test/tests/template/: test_suite.hpp
main/warriors/: paper.asm  rock.asm  scissors.asm
sources/: CMakeLists.txt
sources/OS/: CMakeLists.txt
sources/OS/include/: assembly_enums.hpp  report.hpp
sources/OS/src/: assembly.cpp  cpu.cpp  memory.cpp  pcb.cpp  scheduler.cpp
sources/core/: CMakeLists.txt
sources/core/include/: core.hpp  file_loader.hpp  parser.hpp  settings.hpp  warrior.hpp
sources/core/src/: core.cpp
sources/corewar/: CMakeLists.txt
sources/corewar/OS/src/: ctrl_unit.cpp  report.cpp
sources/corewar/include/: corewar.hpp  parser.hpp  warrior.hpp
sources/corewar/include/OS/: cpu.hpp
sources/corewar/src/: corewar.cpp  parser.cpp
sources/corewar/src/OS/: ctrl_unit.cpp
sources/gui/: CMakeLists.txt
sources/gui/include/: control_panel.gui.hpp  imgui_required.hpp  memory_viewer.gui.hpp
sources/gui/src/: control_panel.gui.cpp  control_panel_sections.gui.cpp  corewar.gui.cpp  memory_viewer.gui.cpp
sources/test/: CMakeLists.txt
sources/test/include/OS/: scheduler.tester.hpp  tester-cpu.hpp  tester-memory.hpp
sources/test/include/template/: test_suite.hpp
sources/test/src/: tester-parser.cpp
sources/test/src/OS/: tester-cpu.cpp  tester-memory.cpp  tester-scheduler.cpp
sources/test/warriors.tester/: syntax_defaults.asm
warriors/: imp.asm  paper.asm  scissors.asm
